4 Sep 2014: Wouter
	- Tag 4.1.0.
	- trunk is 4.1.1 in development.
	- fix manpage for nsd-checkzone to have version and date.

29 Aug 2014: Wouter
	- Fix install of the nsd-checkconf man page.

28 Aug 2014: Wouter
	- Tag 4.1.0rc1

25 Aug 2014: Wouter
	- Increased default --with-max-ips from 8 to 16, this increases the
	  number of interfaces you can specify in nsd.conf to listen to.

19 Aug 2014: Wouter
	- Remove .LP after .SH in man pages.

7 Aug 2014: Wouter
	- Fix for process swap of main and reload, reload failure from the
	  pipe is acted on, and reload fail not cause nsd to shutdown, also
	  ignore sigchlds from the servermain in reload, that would cause
	  EINTR to break file reads.
	- trunk has version 4.1.

5 Aug 2014: Wouter
	- Fix #600: document that provide-xfr provides AXFR and not IXFR.
	- remove program group fix, because it is not needed.
	- Fix rising-load-average or memory-leaks in OSes (Linux since 2.6),
	  that keep track of all past process parents, or leak memory
	  for them.  Fix makes it so there is no very deep string of
	  process parents.
	  The reload process is now the process parent of servermain.  That
	  makes signals for children arrive at the reload, and servermain
	  has to use closed pipes to detect that children have exited.

1 Aug 2014: Wouter
	- Set program group on main process and its child processes, and
	  kill them on a reload.

20 July 2014: Wouter
	- Fix endian.h include for OpenBSD.

15 July 2014: Wouter
	- Fix -O3 compile flag to -O2 to avoid miscompilations.
	- Allow user to override the -g -O2 CFLAGS in ./configure.

11 July 2014: Wouter
	- fix strptime implicit declaration error on OpenBSD.

9 July 2014: Wouter
	- removed unnecessary arc4random_uniform.

8 July 2014: Matthijs
	- fake-rfc2553 patch (thanks Benjamin Baier).

8 July 2014: Wouter
	- wait and reap processes that are not part of the process group.

7 July 2014: Wouter
	- Code review fixup from NSD3.

30 Jun 2014: Wouter