@@ -1,3 +1,6 @@
+15 Sep 2014: Wouter
+	- RFC 7344: CDS and CDNSKEY (read in).
+
 4 Sep 2014: Wouter
 	- Tag 4.1.0.
 	- trunk is 4.1.1 in development.
